--- a/PROYECTOGIMNASIO/menuprincipal.Master
+++ b/PROYECTOGIMNASIO/menuprincipal.Master
@@ -5,6 +5,7 @@
 <html>
 <head runat="server">
     <link href="css/EstiloMenu.css" rel="stylesheet" />
+    <link href="css/GRIDESTILO.css" rel="stylesheet" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
