--- a/PROYECTOGIMNASIO/menuprincipal.Master
+++ b/PROYECTOGIMNASIO/menuprincipal.Master
@@ -33,7 +33,7 @@
      
     </div>
   </div> 
-   <a href="Factura.aspx">Facturacion</a>
+   <a href="Facturacion.aspx">Facturacion</a>
   <a href="#contact">Ayuda</a>
 </div>
 
